library_management_system/library_management_system/src/main/java/com/example/library_management_system/Error/exceptions/DuplicatedRecordException.java
package com.example.library_management_system.Error.exceptions;

public class DuplicatedRecordException  extends RuntimeException{
    public DuplicatedRecordException() {

    }

    public DuplicatedRecordException(String message) {
        super(message);
    }
}